--- a/app/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.viviendas.ViviendasFragment">
+    tools:context=".ui.dashboard.DashboardFragment">
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.example.realestate.ui.viviendas.ViviendaFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <TextView
+        android:id="@+id/text_dashboard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
