--- a/app/app/src/main/res/layout/fragment_videojuego.xml
+++ b/app/app/src/main/res/layout/fragment_videojuego.xml
@@ -22,6 +22,7 @@
         android:layout_height="33dp"
         android:layout_margin="@dimen/text_margin"
         android:text="titulo"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/imagenVideojuego"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,6 +32,7 @@
         android:layout_height="39dp"
         android:layout_margin="@dimen/text_margin"
         android:text="precio"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/imagenVideojuego"
         app:layout_constraintTop_toBottomOf="@+id/nombre" />
 
