--- a/app/app/src/main/res/menu/bottom_new_nav_menu.xml
+++ b/app/app/src/main/res/menu/bottom_new_nav_menu.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/juegos"
-        android:title="Juegos"
+    <item android:id="@+id/navigation_home"
+        android:title="@string/title_juegos"
         android:icon="@drawable/ic_juegos"/>
 
-    <item android:id="@+id/buscar"
-        android:title="Buscar"
+    <item android:id="@+id/navigation_dashboard"
+        android:title="@string/title_buscar"
         android:icon="@drawable/ic_buscar"/>
 
     <item android:id="@+id/placeholder"
         android:title=""/>
 
-    <item android:id="@+id/perfil"
-        android:title="Perfil"
+    <item android:id="@+id/navigation_notifications"
+        android:title="@string/title_perfil"
         android:icon="@drawable/ic_perfil"/>
 
     <item android:id="@+id/Salir"
-        android:title="Salir"
+        android:title="@string/title_salir"
         android:icon="@drawable/ic_cerrar_sesion"/>
 
 </menu>
