--- a/app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.triana.virtual_gaming.ui.perfil.PerfilFragment"
+        android:name="com.triana.virtual_gaming.ui.profile.ProfileFragment"
         android:label="@string/title_vacio"
         tools:layout="@layout/perfil_fragment" />
 
