--- a/app/app/src/main/res/layout/fragment_videojuego_list.xml
+++ b/app/app/src/main/res/layout/fragment_videojuego_list.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/listado"
     android:name="com.triana.virtual_gaming.ui.videojuegos.VideojuegosFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
