--- a/app/app/src/main/res/layout/fragment_videojuego.xml
+++ b/app/app/src/main/res/layout/fragment_videojuego.xml
@@ -22,7 +22,7 @@
         android:layout_width="160dp"
         android:layout_height="33dp"
         android:layout_margin="@dimen/text_margin"
-        android:text="titulo"
+        android:text=""
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/imagenVideojuego"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
         android:layout_width="58dp"
         android:layout_height="39dp"
         android:layout_margin="@dimen/text_margin"
-        android:text="precio"
+        android:text=""
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/imagenVideojuego"
         app:layout_constraintTop_toBottomOf="@+id/nombre" />
