--- a/app/app/src/main/res/layout/new_activity_main.xml
+++ b/app/app/src/main/res/layout/new_activity_main.xml
@@ -4,17 +4,26 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <Button
+        android:id="@+id/ver_perfil"
+        android:layout_width="129dp"
+        android:layout_height="wrap_content"
+        android:text="Ver Perfil"
+        android:layout_marginLeft="260dp"/>
+
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="677dp"
+        android:layout_height="660dp"
+        android:layout_marginTop="50dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation" />
+        app:navGraph="@navigation/mobile_navigation" >
+    </fragment>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/nuevo_appBar"
