ahora se puede crear un ordenador sin problemas, añadi en el menu el boton de ordenadores para poder ver el listado de ordenadores creados y agregue la funcion de eliminar un ordenador

--- a/app/app/src/main/res/menu/bottom_new_nav_menu.xml
+++ b/app/app/src/main/res/menu/bottom_new_nav_menu.xml
@@ -13,8 +13,8 @@
         android:title=""/>
 
     <item android:id="@+id/navigation_notifications"
-        android:title="@string/title_perfil"
-        android:icon="@drawable/ic_perfil"/>
+        android:title="@string/title_ordenadores"
+        android:icon="@drawable/ic_ordenador"/>
 
     <item android:id="@+id/Salir"
         android:title="@string/title_salir"
